--- a/portafolio/modelado.html
+++ b/portafolio/modelado.html
@@ -7,12 +7,34 @@
     <title>Modelado 3D</title>
 </head>
 <body>
-    <h1>Modelado 3D </h1>
-    <img src="/archivos- de-portafolio/untitled.png" width="800 px" height="500 px" alt="hongo modelado"> 
-    <img src="/archivos- de-portafolio/untituuled.png" width="800 px" height="500 px" alt="edificio"> 
+    <p style="background:#6c4c0b; color:white; font-weight:bold; padding:50px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:50px; border-radius:10px;">MODELADO 3D</p>
+    <img src="/archivos- de-portafolio/untitled.png" width="900 px" height="600 px" alt="hongo modelado"> 
+    <img src="/archivos- de-portafolio/untituuled.png" width="900 px" height="600 px" alt="edificio"> 
 
-    <h1>Animación 3D </h1>
+    <p style="background:#6c4c0b; color:white; font-weight:bold; padding:50px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:50px; border-radius:10px;">ANIMACIÓN 2D</p>
     <img src="/archivos- de-portafolio/070423.gif" width="800 px" height="500 px" alt="running"> 
-    <img src="/archivos- de-portafolio/180324.gif" width="800 px" height="500 px" alt="butterfly"> 
+    <img src="/archivos- de-portafolio/180324.gif" width="800 px" height="400 px" alt="butterfly"> 
+
+    <p style="background:#6c4c0b; color:white; font-weight:bold; padding:50px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:50px; border-radius:10px;">FOTOGRAFÍA</p>
+
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.02.45 AM.jpeg" width="900 px" height="600 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.02.46 AM.jpeg" width="900 px" heigh6="600 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (1).jpeg" width="900 px" height="1050 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (3).jpeg" width="445 px" height="550 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (5).jpeg" width="450 px" height="550 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (9).jpeg" width="450 px" height="550 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (8).jpeg" width="440 px" height="550 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (7).jpeg" width="900 px" height="1250 px" alt="pic"> 
+    <img src="/archivos- de-portafolio/WhatsApp Image 2024-04-11 at 9.06.32 AM (11).jpeg" width="900 px" height="1250 px" alt="pic"> 
+
+
+    
+
+
+
+
+
+
+
 </body>
 </html>
