--- a/3-maquetacion-cv/index.html
+++ b/3-maquetacion-cv/index.html
@@ -38,7 +38,7 @@
             <p style="background:#6c4c0b; color:white; font-weight:bold; padding:15px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:22px; border-radius:10px;">APTITUDES</p>
             <p> Soy una persona adaptable al entorno de trabajo, dispuesto a colaborar y aprender de los demás. Me considero disciplinado y tranquilo. </p><br>
 
-            <p style="background:#6c4c0b; color:white; font-weight:bold; padding:15px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:22px; border-radius:10px;">INTÉRESES</p>
+            <p style="background:#6c4c0b; color:white; font-weight:bold; padding:15px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:22px; border-radius:10px;">INTERESES</p>
             <p> Siempre me he considerado una persona atraída por los medios visuales y la creatividad, me interesan diversas áreas como el modelado 3D y la ilustración. </p><br>
 
             <p style="background:#6c4c0b; color:white; font-weight:bold; padding:15px; border:3px solid #6c4c0b; margin-top:40px; margin-bottom:40px; text-align:center; font-size:22px; border-radius:10px;">EXPERIENCIA LABORAL</p>
